adciona java script

--- a/Aulas/NLW/Desktop/index.html
+++ b/Aulas/NLW/Desktop/index.html
@@ -9,46 +9,51 @@
   </head>
   <body>
     <main>
-        <div class="content">
-          <div class="faixa"></div>
-          <div class="barra"></div>
-          <div class="vector"></div>
-          <div class="avatar">
-            <span> <img src="images/logo.svg" alt="Logo" /></span>
-            <img
-              src="images/WhatsApp Image 2022-02-24 at 19.04.10.jpeg"
-              alt="Foto"
-            />
-          </div>
-          <h1>Carlos Henrique</h1>
-            <a class="github" href="http://github.com/caiquemoa" target="_blank" rel="noopener noreferrer">
-              <img src="images/github.svg" alt="">
-              <p>Caiquemoa</p>
-            </a>
-          <p>An programing language student at RocketSeat</p>
-          <ul>
-            <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="images/Facebook.svg" alt="">
-              </a>
-            </li>
-            <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="images/Youtube.svg" alt="">
-              </a>
-            </li>
-            <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="images/twitter.svg" alt="">
-              </a>
-            </li>
-            <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer">
-                <img src="images/Instagram.svg" alt="">
-              </a>
-            </li>
-          </ul>
+      <div class="content">
+        <div class="faixa"></div>
+        <div class="barra"></div>
+        <div class="vector"></div>
+        <div class="avatar">
+          <span> <img src="images/logo.svg" alt="Logo" /></span>
+          <img
+            src="images/WhatsApp Image 2022-02-24 at 19.04.10.jpeg"
+            alt="Foto"
+          />
         </div>
+        <h1>Carlos Henrique</h1>
+        <a
+          class="github"
+          href="http://github.com/caiquemoa"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="images/github.svg" alt="" />
+          <p>Caiquemoa</p>
+        </a>
+        <p>An programing language student at RocketSeat</p>
+        <ul>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img src="images/Facebook.svg" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img src="images/Youtube.svg" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img src="images/twitter.svg" alt="" />
+            </a>
+          </li>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img src="images/Instagram.svg" alt="" />
+            </a>
+          </li>
+        </ul>
+      </div>
     </main>
   </body>
 </html>
