--- a/Aulas/NLW/Mobile/index.html
+++ b/Aulas/NLW/Mobile/index.html
@@ -19,29 +19,31 @@
             alt="Caique Foto"
           />
         </div>
-        <h1>Carlos Henrique</h1>
-        <a href="https://github.com/caiquemoaz">
-          <img src="images/github.svg" alt="ícone github" />
-          Caiquemoa</a
-        >
-        <p>An programing language student at RocketSeat</p>
-        <ul>
-          <li>
-            <a href="" target="_blank">
+        <div id="userName">
+          <h1>Carlos Henrique</h1>
+          <a href="https://github.com/caiquemoaz">
+            <img src="images/github.svg" alt="ícone github" />
+            <span>caiquemoa</span>
+          </a>
+          <p>An programing language student at RocketSeat</p>
+        </div>
+        <ul id="redeSocial">
+          <li class="youtube">
+            <a class="penis" href="" target="_blank">
               <img src="images/Youtube.svg" alt="Icone Youtube" />
             </a>
           </li>
-          <li>
+          <li class="facebook">
             <a href="" target="_blank">
               <img src="images/Facebook.svg" alt="Icone Youtube" />
             </a>
           </li>
-          <li>
+          <li class="twitter">
             <a href="" target="_blank">
               <img src="images/Twitter.svg" alt="Icone Youtube" />
             </a>
           </li>
-          <li>
+          <li class="instagram">
             <a href="" target="_blank">
               <img src="images/Instagram.svg" alt="Icone Youtube" />
             </a>
@@ -49,5 +51,7 @@
         </ul>
       </div>
     </main>
+    <script src="main.js"></script>
+    <source src="" type="" />
   </body>
 </html>
