desktop-images-update

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <ul>
           <li>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-              <img src="images/Facebook.svg" alt="" />
+              <img src="images/facebook.svg" alt="" />
             </a>
           </li>
           <li>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-              <img src="images/Youtube.svg" alt="" />
+              <img src="images/youtube.svg" alt="" />
             </a>
           </li>
           <li>
@@ -49,7 +49,7 @@
           </li>
           <li>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-              <img src="images/Instagram.svg" alt="" />
+              <img src="images/instagram.svg" alt="" />
             </a>
           </li>
         </ul>
