--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </li>
           <li>
             <a href="http://" target="_blank" rel="noopener noreferrer">
-              <img src="images/youtube.svg" alt="" />
+              <img src="images/Youtube.svg" alt="" />
             </a>
           </li>
           <li>
