--- a/Aulas/NLW/Mobile/index.html
+++ b/Aulas/NLW/Mobile/index.html
@@ -30,22 +30,22 @@
         <ul id="redeSocial">
           <li class="youtube">
             <a class="penis" href="" target="_blank">
-              <img src="images/Youtube.svg" alt="Icone Youtube" />
+              <img src="images/youtube.svg" alt="Icone Youtube" />
             </a>
           </li>
           <li class="facebook">
             <a href="" target="_blank">
-              <img src="images/Facebook.svg" alt="Icone Youtube" />
+              <img src="images/facebook.svg" alt="Icone Youtube" />
             </a>
           </li>
           <li class="twitter">
             <a href="" target="_blank">
-              <img src="images/Twitter.svg" alt="Icone Youtube" />
+              <img src="images/twitter.svg" alt="Icone Youtube" />
             </a>
           </li>
           <li class="instagram">
             <a href="" target="_blank">
-              <img src="images/Instagram.svg" alt="Icone Youtube" />
+              <img src="images/instagram.svg" alt="Icone Youtube" />
             </a>
           </li>
         </ul>
