--- a/Aulas/Pessoal/Html,Css Feliz/index.html
+++ b/Aulas/Pessoal/Html,Css Feliz/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="components/tittle.css" />
+    <link rel="stylesheet" href="components/action.css" />
+    <link rel="stylesheet" href="components/button.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,19 +17,19 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <img src="images/logo.svg" alt="" />
       <nav>
-        <a href="" lang="en">Skills</a>
-        <a href="">Projetos</a>
-        <a href="">Sobre</a>
-        <a href="">Contatos</a>
+        <a class="action" href="" lang="en">Skills</a>
+        <a class="action" href="">Projetos</a>
+        <a class="action" href="">Sobre</a>
+        <a class="action" href="">Contatos</a>
         <a class="button" href="" lang="en">Download CV</a>
       </nav>
     </header>
-    <div id="boxTittle">
-      <h1>Carlos Henrique</h1>
-      <h2>FrontEnd/BackEnd Developer</h2>
+    <div class="boxTittle">
+      <h1 class="tittle">Carlos Henrique</h1>
+      <h2 class="subtittle">FrontEnd/BackEnd Developer</h2>
     </div>
     <a class="button" href="" lang="en">Download CV</a>
     <a class="button" href="" lang="en">Download CV</a>
