Git-Page desktop round 3

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="components/tittle.css" />
-    <link rel="stylesheet" href="components/section.css" />
-
-    <link rel="stylesheet" href="components/action.css" />
-    <link rel="stylesheet" href="components/button.css" />
+    <link rel="stylesheet" href="tittle.css" />
+    <link rel="stylesheet" href="section.css" />
+    <link rel="stylesheet" href="action.css" />
+    <link rel="stylesheet" href="button.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
