--- a/Aulas/Pessoal/Html,Css Feliz/index.html
+++ b/Aulas/Pessoal/Html,Css Feliz/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="components/tittle.css" />
+    <link rel="stylesheet" href="components/resets.css" />
+    <link rel="stylesheet" href="components/header.css" />
+    <link rel="stylesheet" href="components/header-ancor.css" />
+    <link rel="stylesheet" href="components/stylized-button.css" />
+    <link rel="stylesheet" href="components/banner.css" />
+    <link rel="stylesheet" href="components/main-tittle.css" />
     <link rel="stylesheet" href="components/section.css" />
+    <link rel="stylesheet" href="components/skills.css" />
+    <link rel="stylesheet" href="components/progress-bar.css" />
+    <link rel="stylesheet" href="components/projects.css" />
 
-    <link rel="stylesheet" href="components/action.css" />
-    <link rel="stylesheet" href="components/button.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,23 +25,89 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo">Caique</div>
+      <div class="name-logo">Caique</div>
       <nav>
-        <a class="action" href="" lang="en">Skills</a>
-        <a class="action" href="">Projetos</a>
-        <a class="action" href="">Sobre</a>
-        <a class="action" href="">Contatos</a>
-        <a class="button" href="" lang="en">Download CV</a>
+        <a class="header-ancor" href="" lang="en">Skills</a>
+        <a class="header-ancor" href="">Projetos</a>
+        <a class="header-ancor" href="">Sobre</a>
+        <a class="header-ancor" href="">Contatos</a>
+        <a class="stylized-button" href="" lang="en">Download CV</a>
       </nav>
     </header>
     <section class="banner">
-      <div class="sectionComponents">
-        <div class="boxTittle">
-          <h1 class="tittle">Carlos Henrique</h1>
-          <h2 class="subtittle">FrontEnd/BackEnd Developer</h2>
+      <div class="tittle-wrapper">
+        <h1 class="main-tittle">Carlos Henrique</h1>
+        <h2 class="subtittle">FrontEnd/BackEnd Developer</h2>
+        <div class="button-wrapper">
+          <a class="stylized-button -secondownload" href="" lang="en">
+            Download CV
+          </a>
+          <a class="stylized-button -contatos" href="" lang="en">Contatos</a>
         </div>
-        <a id="download" class="button" href="" lang="en">Download CV</a>
-        <a id="contatos" class="button" href="" lang="en">Contatos</a>
+      </div>
+    </section>
+    <section class="section">
+      <h2 class="main-tittle -second">Skills</h2>
+      <div class="skill-wrapper">
+        <article class="tec-bar-wrapper">
+          <img class="tec-icon" src="images/ico_html5.svg" alt="" />
+          <div class="bar-wrapper">
+            <h3>HTML</h3>
+            <progress value="60" max="100" class="progress-bar"></progress>
+          </div>
+        </article>
+        <article class="tec-bar-wrapper">
+          <img class="tec-icon" src="images/ico_css3.svg" alt="" />
+          <div class="bar-wrapper">
+            <h3>CSS</h3>
+            <progress value="50" max="100" class="progress-bar"></progress>
+          </div>
+        </article>
+        <article class="tec-bar-wrapper">
+          <img class="tec-icon" src="images/ico_js.svg" alt="" />
+          <div class="bar-wrapper">
+            <h3>JavaScript</h3>
+            <progress value="40" max="100" class="progress-bar"></progress>
+          </div>
+        </article>
+        <article class="tec-bar-wrapper">
+          <img class="tec-icon" src="images/ico_react.svg" alt="" />
+          <div class="bar-wrapper">
+            <h3>React</h3>
+            <progress value="5" max="100" class="progress-bar"></progress>
+          </div>
+        </article>
+        <article class="tec-bar-wrapper">
+          <img class="tec-icon" src="images/ico_nodejs.svg" alt="" />
+          <div class="bar-wrapper">
+            <h3>NodeJS</h3>
+            <progress value="15" max="100" class="progress-bar"></progress>
+          </div>
+        </article>
+        <article class="tec-bar-wrapper">
+          <img class="tec-icon" src="images/ico-python.svg" alt="" />
+          <div class="bar-wrapper">
+            <h3>Python</h3>
+            <progress value="40" max="100" class="progress-bar"></progress>
+          </div>
+        </article>
+      </div>
+    </section>
+    <section class="section -projects">
+      <h3 class="main-tittle -second">Projetos</h3>
+      <div class="project-organizer">
+        <article class="project-wrapper">
+          <h3 class="main-tittle -second">NLW-BADGE</h3>
+          <a href="">
+            <img class="project" src="images/NWL_BADGE.jpeg" alt="Foto" />
+          </a>
+        </article>
+        <article class="project-wrapper">
+          <h3 class="main-tittle -second">YT-CLONE</h3>
+          <a href="">
+            <img class="project" src="images/youtube.jpeg" alt="Foto" />
+          </a>
+        </article>
       </div>
     </section>
   </body>
